add more styles and away team

--- a/index.html
+++ b/index.html
@@ -28,6 +28,16 @@
             <button class="score-btn" id="home-add-3">+3</button>
           </div>
         </div>
+         <div class="team" id="away-team">
+          
+          <h2 class="team-name">Away</h2>
+          <div class="score" id="away-score">0</div>
+          <div class="score-btns">
+            <button class="score-btn" id="away-add-1">+1</button>
+            <button class="score-btn" id="away-add-2">+2</button>
+            <button class="score-btn" id="away-add-3">+3</button>
+          </div>
+        </div>
       </section>
 
       <footer class="scoreboard-footer">
