finish styles and javascript

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       </section>
 
       <footer class="scoreboard-footer">
-        <button class="reset-btn">Reset Game</button>
+        <button id="reset-btn" class="reset-btn">Reset Game</button>
       </footer>
     </main>
 
