fix bug in code

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <h2 class="team-name">Home</h2>
           <div class="score" id="home-score">0</div>
           <div class="score-btns">
-            <button class="score-btn" id="clr">+1</button>
+            <button class="score-btn" id="home-add-1">+1</button>
             <button class="score-btn" id="home-add-2">+2</button>
             <button class="score-btn" id="home-add-3">+3</button>
           </div>
